--- a/db_demo_1/templates/index.html
+++ b/db_demo_1/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-</head>
-<body>
-    <p>This is the index page</p>
-</body>
-</html>
+{% extends 'bs_base.html' %}
+
+{% block title %}Index Page{% endblock %}
+
+{% block body %}<h1>Index Page</h1>{% endblock %}
