--- a/db_demo_1/templates/index.html
+++ b/db_demo_1/templates/index.html
@@ -2,4 +2,89 @@
 
 {% block title %}Index Page{% endblock %}
 
-{% block body %}<h1>Index Page</h1>{% endblock %}
+{% block main %}
+<div class="jumbotron">
+    <div class="container" style="width: 100%; padding: 0px">
+        <h1>Hello, world!</h1>
+        <p>..
+            bla
+            bal
+            bal
+            bar
+            abala
+            abarra
+            bara
+            arbar
+            arar
+            .</p>
+        <p>adfas</p>
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+
+
+    </div>
+
+</div>
+<div class="jumbotron">
+    <div class="container" style="width: 100%; padding: 0px">
+        <h1>Hello, world!</h1>
+        <p>..
+            bla
+            bal
+            bal
+            bar
+            abala
+            abarra
+            bara
+            arbar
+            arar
+            .</p>
+        <p>adfas</p>
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+                <p>adfas</p>
+
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+
+
+    </div>
+
+</div>
+
+
+{% endblock %}
