--- a/db_demo_1/templates/bs_base.html
+++ b/db_demo_1/templates/bs_base.html
@@ -69,8 +69,10 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    {% block before_main %}{% endblock %}
     <div class="main container" style="width: 100%; margin-top: 50px; padding: 0px;">
         {% block main %}{% endblock %}
     </div>
+    {% block after_main %}{% endblock %}
 </body>
 </html>
